--- a/test/WebContent/adminContainer.html
+++ b/test/WebContent/adminContainer.html
@@ -31,9 +31,16 @@
 				</thead>
 				<tbody id='userTableBody'>
 				
-				</tbody'>
+				</tbody>
 
 		</table>
+		</form>
+		
+		<form id="deleteuser">
+		<p>
+		Input User Id to delete User
+		<input type = "text" id="deleteUserForm"> <input type="submit" id="confirmDeleteUser">Delete User</inpu>
+		</p>
 		</form>
 	</div>
 
